# reachy_mini_labs

./: README.md  pyproject.toml
src/module_1/: 01_first_connection.py  02_resilient_connection.py
src/reachy_mini_labs/: __init__.py  constants.py  utils.py
