[project]
name = "reachy-mini-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Solorio", email = "103829+ksolo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "reachy-mini>=1.5.1",
]

[tool.uv]
override-dependencies = [
    "gstreamer-msvc-runtime; sys_platform == 'win32'",
]

[project.scripts]
reachy-mini-labs = "reachy_mini_labs:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
